# acp_test

./: .gitattributes  .gitignore  AGENTS.md  CODING_STANDARDS.md  README.md  TODO.md  opencode.json  package-lock.json  package.json  pyproject.toml
.opencode/tools/: hello_world.ts
adrs/: 000-index.md  001-acp-proxy-architecture.md  002-session-per-conversation.md  003-system-prompt-injection.md  004-last-user-message-extraction.md  005-fail-loud-testing.md  006-binary-discovery.md  007-tool-ownership.md  008-proxy-as-substrate.md  009-intra-process-session-scaling.md  011-context-injection-boundary.md  GUIDE.md
docs/: handoff.md  journal.md
experiments/concurrency/: README.md  acp_harness.py  probe_concurrency.py
experiments/cot_injection/: README.md  probe_code_correctness.py  probe_cot_injection.py  probe_cot_painting.py  probe_cot_v3.py
src/: acp_probe.py  acp_validate.py
src/acp_proxy/: __init__.py  __main__.py  client.py  config.py  discovery.py  server.py  transport.py
src/acp_proxy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_client.py  test_config.py  test_discovery.py  test_integration.py  test_server.py  test_transport.py
tmp/: diagnose.py  probe_code_correctness.py  probe_cot_injection.py  probe_cot_painting.py  probe_cot_v3.py  probe_model_switch.py
tmp/configs/: code_correctness.json  code_eval_expr.json  code_eval_expr_statistical.json  code_eval_expr_targeted.json  first_run.json  reversal.json
tmp/gpt-4.1-chat-logs/: static-analysis-investigation.md
(+25 files in other folders)
